--- a/src/SmartApprove.Test/App.config
+++ b/src/SmartApprove.Test/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="ApplicationSettings" type="SmartApprove.Model.ApplicationSettings, smartapprove, Version=1.0.0.1" />
+		<section name="ApplicationSettings" type="SmartApprove.Model.ApplicationSettings, smartapprove, Version=1.0.0.1"/>
 	</configSections>
 	<ApplicationSettings>
-		<Server Hostname="services" Port="8530" Secure="false" />
-		<NoRunSet AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+		<Server Hostname="services" Port="8530" Secure="false"/>
+		<NoRunSet AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 		<RunSets>
 			<add Name="Normal">
 				<TargetGroups>
@@ -13,7 +13,7 @@
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
 						<Classifications>
 							<!-- Critical Updates -->
-							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 						</Classifications>
 					</add>
 				</TargetGroups>
@@ -22,14 +22,14 @@
 			<!-- this should fail as the settings are mutually exclusive -->
 			<add Name="BothTargetGroups">
 				<AllTargetGroups>
-					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 				</AllTargetGroups>
 				<TargetGroups>
 					<!-- All Computers -->
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
 						<Classifications>
 							<!-- Critical Updates -->
-							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 						</Classifications>
 					</add>
 				</TargetGroups>
@@ -37,7 +37,7 @@
 
 			<add Name="AllComputerGroups_AllClassifications">
 				<AllTargetGroups>
-					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 				</AllTargetGroups>
 			</add>
 
@@ -45,7 +45,7 @@
 				<AllTargetGroups>
 					<Classifications>
 						<!-- Critical Updates -->
-						<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+						<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 					</Classifications>
 				</AllTargetGroups>
 			</add>
@@ -53,10 +53,10 @@
 			<!-- this should fail as the settings are mutually exclusive -->
 			<add Name="AllComputerGroups_BothClassSetting">
 				<AllTargetGroups>
-					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+					<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 					<Classifications>
 						<!-- Critical Updates -->
-						<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+						<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 					</Classifications>
 				</AllTargetGroups>
 			</add>
@@ -65,7 +65,7 @@
 				<TargetGroups>
 					<!-- All Computers -->
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
-						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 					</add>
 				</TargetGroups>
 			</add>
@@ -76,7 +76,7 @@
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
 						<Classifications>
 							<!-- Critical Updates -->
-							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 						</Classifications>
 					</add>
 				</TargetGroups>
@@ -87,10 +87,10 @@
 				<TargetGroups>
 					<!-- All Computers -->
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
-						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 						<Classifications>
 							<!-- Critical Updates -->
-							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 						</Classifications>
 					</add>
 				</TargetGroups>
@@ -101,7 +101,7 @@
 				<TargetGroups>
 					<!-- All Computers -->
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b422">
-						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" />
+						<AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"/>
 					</add>
 				</TargetGroups>
 			</add>
@@ -113,7 +113,7 @@
 					<add Guid="a0a08746-4dbe-4a37-9adf-9e7652c0b421">
 						<Classifications>
 							<!-- Critical Updates -->
-							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b5" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true" />
+							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b5" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true"/>
 						</Classifications>
 					</add>
 				</TargetGroups>
@@ -128,7 +128,7 @@
 							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true">
 								<Products>
 									<!-- Windows -->
-									<add Guid="6964aab4-c5b5-43bd-a17d-ffb4346a8e1d" />
+									<add Guid="6964aab4-c5b5-43bd-a17d-ffb4346a8e1d"/>
 								</Products>
 							</add>
 						</Classifications>
@@ -146,7 +146,7 @@
 							<add Guid="e6cf1350-c01b-414d-a61f-263d14d133b4" AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="false" ApproveNeededUpdates="true">
 								<Products>
 									<!-- invalid -->
-									<add Guid="9963aab4-c5b5-43bd-a17d-ffb4346a8e1d" />
+									<add Guid="9963aab4-c5b5-43bd-a17d-ffb4346a8e1d"/>
 								</Products>
 							</add>
 						</Classifications>
@@ -155,4 +155,4 @@
 			</add>
 		</RunSets>
 	</ApplicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
