--- a/src/smartapprove/App.config
+++ b/src/smartapprove/App.config
@@ -4,14 +4,14 @@
     <section name="ApplicationSettings" type="SmartApprove.Model.ApplicationSettings, WsusSmartApprove"/>
   </configSections>
   <ApplicationSettings>
-    <Server Hostname="localhost" Port="8530" Secure="false" />
-    <NoRunSet AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"  ShouldApproveUninstalledSupersededUpdate="false" />
+    <Server Hostname="localhost" Port="8530" Secure="false"/>
+    <NoRunSet AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" ShouldApproveUninstalledSupersededUpdate="false"/>
     <RunSets>
       <add Name="Normal">
         <AllTargetGroups>
-          <AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true"  ShouldApproveUninstalledSupersededUpdate="false" />
+          <AllClassifications AcceptLicenseAgreement="true" ApproveStaleUpdates="true" ApproveSupersededUpdates="true" ApproveNeededUpdates="true" ShouldApproveUninstalledSupersededUpdate="false"/>
         </AllTargetGroups>
       </add>
     </RunSets>
   </ApplicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
