--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@0e477eda777a6587a64c4fd7dd54af60bd75f192
     - name: Install RSAT WSUS tools
-      run: Get-WindowsCapability -Name 'RSAT.WSUS.TOOLS*' -Online | Add-WindowsCapability –Online
+      run: Get-WindowsCapability -Name 'RSAT.WSUS.TOOLS*' -Online | Add-WindowsCapability -Online
       shell: powershell
     - name: Build
       run: .\build.ps1
