--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,6 +21,9 @@ jobs:
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@0e477eda777a6587a64c4fd7dd54af60bd75f192
+    - name: DISM install RSAT WSUS tools
+      run: DISM /Online /Add-Capability /CapabilityName:Rsat.WSUS.Tools~~~~0.0.1.0
+      shell: cmd      
     - name: Install RSAT WSUS tools
       run: Get-WindowsCapability -Name 'RSAT.WSUS.TOOLS*' -Online | Add-WindowsCapability -Online
       shell: powershell
